--- a/Specs/packages.config
+++ b/Specs/packages.config
@@ -4,4 +4,5 @@
   <package id="LibGit2Sharp" version="0.24.0" targetFramework="net461" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.185" targetFramework="net461" />
   <package id="NUnit" version="3.7.1" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net461" />
 </packages>
