--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="FluentAssertions" version="4.19.3" targetFramework="net461" />
   <package id="NUnit" version="3.7.1" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.8.0" targetFramework="net461" />
 </packages>
