Remove "dynamic" and replace it with a COM proxy object
"dynamic"s have a problem with memory leaks when used with COM objects, see https://stackoverflow.com/questions/33080252/memory-overflow-having-an-increasing-number-of-microsoft-csharp-runtimebinder-s/34123315. So avoid them by using a proxy class accessing members via reflection. This might be slower but should prevent that huge memory leak within RepoZ

--- a/RepoZ.Api.Win/RepoZ.Api.Win.csproj
+++ b/RepoZ.Api.Win/RepoZ.Api.Win.csproj
@@ -61,10 +61,10 @@
     <Compile Include="Git\WindowsRepositoryCache.cs" />
     <Compile Include="Git\WindowsRepositoryActionProvider.cs" />
     <Compile Include="IO\WindowsPathSkipper.cs" />
+    <Compile Include="PInvoke\Combridge.cs" />
     <Compile Include="PInvoke\Explorer\CleanWindowTitleActor.cs" />
     <Compile Include="PInvoke\Explorer\AppendRepositoryStatusTitleActor.cs" />
     <Compile Include="PInvoke\Explorer\ExplorerWindowActor.cs" />
-    <Compile Include="PInvoke\WindowsExplorerPathFinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PInvoke\WindowFinder.cs" />
     <Compile Include="PInvoke\WindowHelper.cs" />
