--- a/RepoZ.Api/RepoZ.Api.csproj
+++ b/RepoZ.Api/RepoZ.Api.csproj
@@ -40,7 +40,8 @@
     <Compile Include="Common\IErrorHandler.cs" />
     <Compile Include="Common\SingularityQueue.cs" />
     <Compile Include="Git\DefaultRepositoryInformationAggregator.cs" />
-    <Compile Include="Git\IPersistentRepositoryCache.cs" />
+    <Compile Include="Git\IRepositoryCache.cs" />
+    <Compile Include="Git\IRepositoryStore.cs" />
     <Compile Include="Git\IRepositoryInformationAggregator.cs" />
     <Compile Include="Git\IRepositoryObserverFactory.cs" />
     <Compile Include="Git\IRepositoryActionProvider.cs" />
