Change tests from Detector to Monitor

--- a/Specs/Specs.csproj
+++ b/Specs/Specs.csproj
@@ -57,9 +57,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssertionHelper.cs" />
-    <Compile Include="DefaultRepositoryDetectorTests.cs" />
+    <Compile Include="DefaultRepositoryMonitorTests.cs" />
+    <Compile Include="Mocks\NeverSkippingPathSkipper.cs" />
+    <Compile Include="Mocks\GivenPathProvider.cs" />
     <Compile Include="IO\RepositoryWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Mocks\UselessRepositoryStore.cs" />
+    <Compile Include="Mocks\UselessRepositoryInformationAggregator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -77,6 +81,7 @@
       <Name>RepoZ.Api</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
