--- a/RepoZ.UI.Win.Wpf/packages.config
+++ b/RepoZ.UI.Win.Wpf/packages.config
@@ -5,5 +5,7 @@
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net461" />
   <package id="MaterialDesignThemes.MahApps" version="0.0.10" targetFramework="net461" />
+  <package id="protobuf-net" version="2.1.0" targetFramework="net461" />
   <package id="TinyIoC" version="1.3" targetFramework="net461" developmentDependency="true" />
+  <package id="TinyIpc" version="1.0.1" targetFramework="net461" />
 </packages>
