--- a/Grr/packages.config
+++ b/Grr/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
   <package id="protobuf-net" version="2.1.0" targetFramework="net452" />
   <package id="TinyIpc" version="1.0.1" targetFramework="net452" />
 </packages>
