--- a/Grr/Grr.csproj
+++ b/Grr/Grr.csproj
@@ -40,6 +40,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,10 +52,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleExtensions.cs" />
     <Compile Include="Messages\IMessage.cs" />
-    <Compile Include="Messages\GotoMessage.cs" />
+    <Compile Include="Messages\ChangeDirectoryMessage.cs" />
     <Compile Include="Messages\ListMessage.cs" />
     <Compile Include="CommandLineOptions.cs" />
+    <Compile Include="ProcessExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
