--- a/Grr/Grr.csproj
+++ b/Grr/Grr.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B6C5874E-BE3D-4981-87B8-DD5BB7B0A24E}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Grr</RootNamespace>
-    <AssemblyName>Grr</AssemblyName>
+    <RootNamespace>grr</RootNamespace>
+    <AssemblyName>grr</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -57,7 +57,6 @@
     <Compile Include="Messages\ChangeDirectoryMessage.cs" />
     <Compile Include="Messages\ListMessage.cs" />
     <Compile Include="CommandLineOptions.cs" />
-    <Compile Include="ProcessExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
