--- a/Grr/grr.csproj
+++ b/Grr/grr.csproj
@@ -53,10 +53,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleExtensions.cs" />
+    <Compile Include="History\IHistoryRepository.cs" />
     <Compile Include="History\State.cs" />
     <Compile Include="History\RegistryHistoryRepository.cs" />
+    <Compile Include="Messages\Filters\IMessageFilter.cs" />
+    <Compile Include="Messages\Filters\GoBackMessageFilter.cs" />
+    <Compile Include="Messages\Filters\IndexMessageFilter.cs" />
     <Compile Include="Messages\IMessage.cs" />
-    <Compile Include="Messages\ChangeDirectoryMessage.cs" />
+    <Compile Include="Messages\DirectChangeDirectoryMessage.cs" />
+    <Compile Include="Messages\RepositoryChangeDirectoryMessage.cs" />
     <Compile Include="Messages\ListMessage.cs" />
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="Program.cs" />
