--- a/RepoZ.Api/RepoZ.Api.csproj
+++ b/RepoZ.Api/RepoZ.Api.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Git\IRepositoryReader.cs" />
     <Compile Include="Git\IRepositoryDetector.cs" />
     <Compile Include="Git\IRepositoryMonitor.cs" />
-    <Compile Include="Git\PathAction.cs" />
+    <Compile Include="Git\RepositoryAction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Git\Repository.cs" />
   </ItemGroup>
