--- a/RepoZ.Api.Win/RepoZ.Api.Win.csproj
+++ b/RepoZ.Api.Win/RepoZ.Api.Win.csproj
@@ -58,7 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Git\GitCommandException.cs" />
-    <Compile Include="Git\GitHelpers.cs" />
+    <Compile Include="Git\WindowsGitCommander.cs" />
     <Compile Include="Git\WindowsRepositoryStore.cs" />
     <Compile Include="Git\WindowsRepositoryActionProvider.cs" />
     <Compile Include="IO\WindowsPathSkipper.cs" />
