Add a tray menu item to control windows startup
Fixes #27

--- a/RepoZ.UI.Win.Wpf/RepoZ.UI.Win.Wpf.csproj
+++ b/RepoZ.UI.Win.Wpf/RepoZ.UI.Win.Wpf.csproj
@@ -83,6 +83,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutoStart.cs" />
     <Compile Include="NotifyIconViewModel.cs" />
     <Compile Include="WpfThreadDispatcher.cs" />
     <Page Include="App.xaml">
