--- a/grr/grr.csproj
+++ b/grr/grr.csproj
@@ -56,12 +56,13 @@
     <Compile Include="History\IHistoryRepository.cs" />
     <Compile Include="History\State.cs" />
     <Compile Include="History\RegistryHistoryRepository.cs" />
+    <Compile Include="Messages\BrowseDirectoryMessage.cs" />
     <Compile Include="Messages\Filters\IMessageFilter.cs" />
     <Compile Include="Messages\Filters\GoBackMessageFilter.cs" />
     <Compile Include="Messages\Filters\IndexMessageFilter.cs" />
     <Compile Include="Messages\IMessage.cs" />
     <Compile Include="Messages\DirectChangeDirectoryMessage.cs" />
-    <Compile Include="Messages\RepositoryChangeDirectoryMessage.cs" />
+    <Compile Include="Messages\ChangeToRepositoryDirectoryMessage.cs" />
     <Compile Include="Messages\ListMessage.cs" />
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="Program.cs" />
