--- a/grr/grr.csproj
+++ b/grr/grr.csproj
@@ -57,12 +57,12 @@
     <Compile Include="History\State.cs" />
     <Compile Include="History\RegistryHistoryRepository.cs" />
     <Compile Include="Messages\BrowseDirectoryMessage.cs" />
+    <Compile Include="Messages\DirectoryMessage.cs" />
     <Compile Include="Messages\Filters\IMessageFilter.cs" />
     <Compile Include="Messages\Filters\GoBackMessageFilter.cs" />
     <Compile Include="Messages\Filters\IndexMessageFilter.cs" />
     <Compile Include="Messages\IMessage.cs" />
-    <Compile Include="Messages\DirectChangeDirectoryMessage.cs" />
-    <Compile Include="Messages\ChangeToRepositoryDirectoryMessage.cs" />
+    <Compile Include="Messages\ChangeToDirectoryMessage.cs" />
     <Compile Include="Messages\ListMessage.cs" />
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="Program.cs" />
