--- a/grr/grr.csproj
+++ b/grr/grr.csproj
@@ -57,6 +57,7 @@
     <Compile Include="History\State.cs" />
     <Compile Include="History\RegistryHistoryRepository.cs" />
     <Compile Include="Messages\FileMessage.cs" />
+    <Compile Include="Messages\ListRepositoryFilesMessage.cs" />
     <Compile Include="Messages\OpenFileMessage.cs" />
     <Compile Include="Messages\OpenDirectoryMessage.cs" />
     <Compile Include="Messages\DirectoryMessage.cs" />
@@ -65,7 +66,7 @@
     <Compile Include="Messages\Filters\IndexMessageFilter.cs" />
     <Compile Include="Messages\IMessage.cs" />
     <Compile Include="Messages\ChangeToDirectoryMessage.cs" />
-    <Compile Include="Messages\ListMessage.cs" />
+    <Compile Include="Messages\ListRepositoriesMessage.cs" />
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
