--- a/RepoZ.Api.Mac/RepoZ.Api.Mac.csproj
+++ b/RepoZ.Api.Mac/RepoZ.Api.Mac.csproj
@@ -37,8 +37,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IO\MacDriveEnumerator.cs" />
     <Compile Include="IO\MacRepositoryActionProvider.cs" />
-    <Compile Include="Git\MacRepositoryCache.cs" />
+    <Compile Include="Git\MacRepositoryStore.cs" />
     <Compile Include="IO\MacPathSkipper.cs" />
+    <Compile Include="Git\MacGitCommander.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Git\" />
