--- a/RepoZ.UI.Mac.Story/RepoZ.UI.Mac.Story.csproj
+++ b/RepoZ.UI.Mac.Story/RepoZ.UI.Mac.Story.csproj
@@ -92,6 +92,9 @@
     <Compile Include="Model\RepositoryTableDataSource.cs" />
     <Compile Include="Model\RepositoryTableDelegate.cs" />
     <Compile Include="MacThreadDispatcher.cs" />
+    <Compile Include="AppDelegate.designer.cs">
+      <DependentUpon>AppDelegate.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Main.storyboard" />
