Prohibit multiple parallel executions of RepoZ on macOS

--- a/RepoZ.UI.Mac.Story/Info.plist
+++ b/RepoZ.UI.Mac.Story/Info.plist
@@ -32,5 +32,7 @@
 	<string>public.app-category.developer-tools</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
+	<key>LSMultipleInstancesProhibited</key>
+	<true/>
 </dict>
 </plist>
