--- a/RepoZ.UI.Mac.Story/RepoZ.UI.Mac.Story.csproj
+++ b/RepoZ.UI.Mac.Story/RepoZ.UI.Mac.Story.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>RepoZ</AssemblyName>
     <MonoMacResourcePrefix>Resources</MonoMacResourcePrefix>
     <UseXamMacFullFramework>true</UseXamMacFullFramework>
+    <ReleaseVersion>3.0</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
