--- a/RepoZ.UI.Win.Wpf/RepoZ.UI.Win.Wpf.csproj
+++ b/RepoZ.UI.Win.Wpf/RepoZ.UI.Win.Wpf.csproj
@@ -63,6 +63,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.5.0\lib\net45\System.Windows.Interactivity.dll</HintPath>
     </Reference>
@@ -85,6 +86,7 @@
   <ItemGroup>
     <Compile Include="AutoStart.cs" />
     <Compile Include="NotifyIconViewModel.cs" />
+    <Compile Include="TinySoup.cs" />
     <Compile Include="WpfThreadDispatcher.cs" />
     <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
