Add a search box to the WPF app

--- a/RepoZ.UI.Win.Wpf/RepoZ.UI.Win.Wpf.csproj
+++ b/RepoZ.UI.Win.Wpf/RepoZ.UI.Win.Wpf.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoStart.cs" />
+    <Compile Include="Controls\ZTextBox.cs" />
     <Compile Include="NotifyIconViewModel.cs" />
     <Compile Include="TinySoup.cs" />
     <Compile Include="WpfThreadDispatcher.cs" />
