Enable keyboard UI navigation (Mac)

--- a/RepoZ.UI.Mac.Story/RepoZ.UI.Mac.Story.csproj
+++ b/RepoZ.UI.Mac.Story/RepoZ.UI.Mac.Story.csproj
@@ -116,6 +116,7 @@
     <Compile Include="UiStateHelper.cs" />
     <Compile Include="TinySoup.cs" />
     <Compile Include="Controls\ZSearchField.cs" />
+    <Compile Include="Controls\ZTableView.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="PopupView.xib" />
