Make the Win app a floating popup like on Mac

--- a/RepoZ.UI.Win.Wpf/RepoZ.UI.Win.Wpf.csproj
+++ b/RepoZ.UI.Win.Wpf/RepoZ.UI.Win.Wpf.csproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <Compile Include="AutoStart.cs" />
     <Compile Include="Controls\ZTextBox.cs" />
+    <Compile Include="HotKey.cs" />
     <Compile Include="NotifyIconViewModel.cs" />
     <Compile Include="TinySoup.cs" />
     <Compile Include="WpfThreadDispatcher.cs" />
