--- a/grrui/grrui.csproj
+++ b/grrui/grrui.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Terminal.Gui" Version="0.16.0" />
+    <PackageReference Include="TextCopy" Version="1.5.0" />
   </ItemGroup>
 
   <ItemGroup>
