--- a/grrCore/grrCore.csproj
+++ b/grrCore/grrCore.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <Authors>Andreas Wäscher</Authors>
+    <Product>Git Repositories of RepoZ</Product>
+    <Description>Command line interface to query repository information from RepoZ</Description>
+    <PackageProjectUrl>https://github.com/awaescher/RepoZ</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/awaescher/RepoZ/master/grr/grr.ico</PackageIconUrl>
+    <RepositoryUrl>https://github.com/awaescher/RepoZ</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
