Add SendKeys.exe to make directory navigation work (grr & grrui)

--- a/grr/grr.csproj
+++ b/grr/grr.csproj
@@ -19,4 +19,11 @@
   <ItemGroup>
     <ProjectReference Include="..\RepoZ.Ipc\RepoZ.Ipc.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="SendKeys">
+      <HintPath>..\_ref\SendKeys.exe</HintPath>
+      <Private>true</Private>
+    </Reference>
+  </ItemGroup>
 </Project>
