--- a/grrui/grrui.csproj
+++ b/grrui/grrui.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\grr\ConsoleExtensions.cs" Link="ConsoleExtensions.cs" />
     <Compile Include="..\RepoZ.Api\Git\StatusCharacterMap.cs" Link="StatusCharacterMap.cs" />
   </ItemGroup>
 
@@ -17,6 +18,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RepoZ.Ipc\RepoZ.Ipc.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="SendKeys">
+      <HintPath>..\_ref\SendKeys.exe</HintPath>
+      <Private>true</Private>
+    </Reference>
   </ItemGroup>
 
 </Project>
