--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,5 +4,5 @@ pool:
 
 steps:
 - powershell: |
-    .\build.ps1 -Target CompileWinSetup -System win -Verbosity Verbose
+    .\build.ps1 -Target CompileSetup -System win -Verbosity Verbose
   displayName: 'Running Cake build ...'
