--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,9 @@
 
 pool:
   vmImage: 'VS2017-Win2016'
-
-steps:
-- powershell: |
-    .\build.ps1 -Target CompileSetup -System win -Verbosity Verbose
-  displayName: 'Running Cake build ...'
+  
+- task: powershell@1
+    inputs:
+      filePath:.\build.ps1
+      arguments: -System win
+    displayName: 'Running Cake build ...'
