--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,6 @@
 pool:
   vmImage: 'VS2017-Win2016'
   
-- powershell: |
+- script: |
     .\build.ps1 '-Target CompileSetup -System win -Verbosity Diagnostic'
   displayName: 'Running Cake build ...'
