--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,10 @@ pool:
   vmImage: 'VS2017-Win2016'
   
 steps:
-- powershell: |
-    .\build.ps1 
-  arguments: '-Target CompileSetup -System win -Verbosity Diagnostic'
-  displayName: 'Running Cake build ...'
+# PowerShell
+# Run a PowerShell script on Windows, macOS, or Linux.
+- task: PowerShell@2
+  inputs:
+    targetType: filePath
+    filePath: .\build.ps1 
+    arguments: '-Target CompileSetup -System win -Verbosity Diagnostic
