--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,4 +9,5 @@ steps:
   inputs:
     targetType: filePath
     filePath: .\build.ps1 
-    arguments: '-Target CompileSetup -System win -Verbosity Diagnostic
+    arguments: '-Target CompileSetup -System win -Verbosity Diagnostic'
+
