Bind auto fetch items to an enum

--- a/RepoZ.App.Win/RepoZ.App.Win.csproj
+++ b/RepoZ.App.Win/RepoZ.App.Win.csproj
@@ -94,6 +94,7 @@
     <Compile Include="AutoStart.cs" />
     <Compile Include="Controls\ZTextBox.cs" />
     <Compile Include="HotKey.cs" />
+    <Compile Include="MainWindowPageModel.cs" />
     <Compile Include="NotifyIconViewModel.cs" />
     <Compile Include="TinySoup.cs" />
     <Compile Include="WpfThreadDispatcher.cs" />
