Add a appsettings file provider

--- a/RepoZ.Api.Common/RepoZ.Api.Common.csproj
+++ b/RepoZ.Api.Common/RepoZ.Api.Common.csproj
@@ -37,6 +37,9 @@
     <Reference Include="LibGit2Sharp, Version=0.24.0.0, Culture=neutral, PublicKeyToken=7cbde695407f0333, processorArchitecture=MSIL">
       <HintPath>..\packages\LibGit2Sharp.0.24.0\lib\net40\LibGit2Sharp.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\AppSettings.cs" />
+    <Compile Include="Common\FileAppSettingsProvider.cs" />
+    <Compile Include="Common\IAppSettingsProvider.cs" />
     <Compile Include="Git\AutoFetch\AutoFetchMode.cs" />
     <Compile Include="Git\DefaultRepositoryObserver.cs" />
     <Compile Include="Git\DefaultRepositoryMonitor.cs" />
@@ -57,6 +63,8 @@
     <Compile Include="Git\DefaultRepositoryReader.cs" />
     <Compile Include="Git\DefaultRepositoryWriter.cs" />
     <Compile Include="Git\IGitCommander.cs" />
+    <Compile Include="Git\DefaultRepositoryStore.cs" />
+    <Compile Include="IO\DefaultAppDataPathProvider.cs" />
     <Compile Include="IO\DefaultDriveEnumerator.cs" />
     <Compile Include="IO\DefaultPathCrawler.cs" />
     <Compile Include="IO\DefaultPathCrawlerFactory.cs" />
@@ -70,7 +78,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
