--- a/RepoZ.Api.Common/packages.config
+++ b/RepoZ.Api.Common/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="LibGit2Sharp" version="0.24.0" targetFramework="net45" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.185" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net45" />
 </packages>
