--- a/RepoZ.Api.Common/RepoZ.Api.Common.csproj
+++ b/RepoZ.Api.Common/RepoZ.Api.Common.csproj
@@ -70,6 +70,8 @@
     <Compile Include="IO\DefaultPathCrawlerFactory.cs" />
     <Compile Include="IO\GravellPathCrawler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Git\AutoFetch\DefaultAutoFetchHandler.cs" />
+    <Compile Include="Git\AutoFetch\IAutoFetchHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RepoZ.Api\RepoZ.Api.csproj">
