--- a/RepoZ.Api.Common/RepoZ.Api.Common.csproj
+++ b/RepoZ.Api.Common/RepoZ.Api.Common.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Common\FileAppSettingsService.cs" />
     <Compile Include="Common\IAppSettingsService.cs" />
     <Compile Include="Git\AutoFetch\AutoFetchMode.cs" />
+    <Compile Include="Git\AutoFetch\AutoFetchProfile.cs" />
     <Compile Include="Git\DefaultRepositoryObserver.cs" />
     <Compile Include="Git\DefaultRepositoryMonitor.cs" />
     <Compile Include="Git\DefaultRepositoryDetector.cs" />
