--- a/grr/grr.csproj
+++ b/grr/grr.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.3.0" />
+    <PackageReference Include="TextCopy" Version="1.5.0" />
   </ItemGroup>
 
   <ItemGroup>
